function(add_extension_test EXTENSION_NAME)
    find_package(OpenSSL REQUIRED)
    set(TEST_NAME ${EXTENSION_NAME}_extension_test)
    set(SRCS ${ARGN})
    add_executable(${TEST_NAME} ${SRCS})
    target_link_libraries(${TEST_NAME} PUBLIC neug::GTest neug_${EXTENSION_NAME}_extension neug_libraries
        ${GLOG_LIBRARIES} ${Protobuf_LIBRARIES} ${ARROW_LIB} ${OPENSSL_LIBRARIES} 
        ${CRYPTO_LIB} ${GFLAGS_LIBRARIES})
    if (ENABLE_GCOV)
        target_compile_options(${TEST_NAME} PRIVATE --coverage)
        target_link_options(${TEST_NAME} PRIVATE --coverage)
    endif()
    include(GoogleTest)
	add_test(NAME ${TEST_NAME} COMMAND ${TEST_NAME})
	gtest_add_tests(TARGET ${TEST_NAME} TEST_LIST ${TEST_NAME}_tests)
endfunction()

if ("json" IN_LIST BUILD_EXTENSIONS)
    add_extension_test(json json_test.cpp)
endif()