file(GLOB SOURCE_PY "neug/*")

file(GLOB_RECURSE SOURCE_CPP "${CMAKE_CURRENT_SOURCE_DIR}/src/*.cc")
pybind11_add_module(neug_py_bind SHARED ${SOURCE_CPP})
include_directories(${CMAKE_CURRENT_BINARY_DIR}/../../src/compiler)
add_dependencies(neug_py_bind neug_plan_proto)
if (BUILD_ALL_IN_ONE)
    set(NEUG_LIBRARIES neug_libraries)
else()
    set(NEUG_LIBRARIES neug_execution neug_main neug_utils)
endif()
if (BUILD_HTTP_SERVER)
    set(NEUG_LIBRARIES ${NEUG_LIBRARIES} ${BRPC_LIB} ${LEVELDB_LIB} ${OPENSSL_LIBRARIES} ${GLOG_LIBRARIES} ${Protobuf_LIBRARIES})
endif()

target_link_libraries(neug_py_bind PRIVATE ${NEUG_LIBRARIES}) 