[tool.property]
license = "Apache 2.0"

[build-system]
requires = [
    "pybind11>=2.9.2",
    "setuptools",
    "wheel",
    "protobuf<=3.20",
    "packaging>=24.2",
]
build-backend = "setuptools.build_meta"

[project]
name = "neug"
requires-python = ">=3.8"
version = "0.1.0"
description = "GraphScope NeuG for python"
authors = [{name="GraphScope Team", email="graphscope@alibaba-inc.com"}]
readme = "README.md"
keywords = ["Graph", "Python", "Embedded", "Graph Database"]
dependencies = [
    "pybind11>=2.9.2",
    "packaging>=24.2",
    "protobuf<=3.20",
    "requests",
    "click>=8.0.0",
    "tabulate>=0.9.0",
    "PyYAML>=6.0.2",
    "tqdm",
    "gnureadline>=8.0.0; sys_platform == 'darwin'"
]

[project.scripts]
neug-cli = "neug.neug_cli:cli"

[project.optional-dependencies]
test = [
    "pytest>=6.2.5",
    "black>=23.3.0",
    "flake8==4.0.1",
    "isort==5.10.1",
]

[tool.cibuildwheel]
build = "cp38-* cp39-* cp310-* cp311-* cp312-* cp313-*"
skip = ["*-musllinux_*", "*i686*"]
environment-pass = ["BUILD_TYPE", "CMAKE_BUILD_PARALLEL_LEVEL", "CMAKE_PREFIX_PATH", "MACOSX_DEPLOYMENT_TARGET"]
manylinux-x86_64-image = "registry.cn-hongkong.aliyuncs.com/graphscope/graphscope-dev:neug-manylinux-brpc-x86_64-debug"
manylinux-aarch64-image = "registry.cn-hongkong.aliyuncs.com/graphscope/graphscope-dev:neug-manylinux-brpc-arm64-debug"

[tool.cibuildwheel.linux]
before-all = ["git submodule update --init"]
before-build = [". /root/.neug_env"]
environment = {CMAKE_PREFIX_PATH="/opt/neug/", OPENSSL_ROOT_DIR="/opt/neug", LIBRARY_PATH="/opt/neug/lib:/opt/neug/lib64", LD_LIBRARY_PATH="/opt/neug/lib:/opt/neug/lib64:$LD_LIBRARY_PATH",  DYLD_LIBRARY_PATH="/opt/neug/lib:/opt/neug/lib64:$DYLD_LIBRARY_PATH"}

[tool.cibuildwheel.macos]
before-all = ["git submodule update --init"]
environment = {MACOSX_DEPLOYMENT_TARGET="11.0", CMAKE_PREFIX_PATH="/opt/neug/", DYLD_LIBRARY_PATH="/opt/neug/lib:/opt/neug/lib64", OPENSSL_ROOT_DIR="/opt/neug"}
repair-wheel-command = [
    'source ~/.neug_env',
    'delocate-wheel --require-archs {delocate_archs} -w {dest_dir} -v {wheel}'
]

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
